{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 10,
  "lineage": "ddbefa29-7095-d8d3-bdd2-5415dcc5f876",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_2016_dc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eee786016f889c3a",
            "arn": "arn:aws:ec2:us-east-2:262002194417:instance/i-06d580e99afa97afd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d580e99afa97afd",
            "instance_state": "running",
            "instance_type": "t2.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "active_directory",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb553000c851c781",
            "private_dns": "ip-10-0-1-16.us-east-2.compute.internal",
            "private_ip": "10.0.1.16",
            "public_ip": "3.15.220.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03c9eaabb3a05409e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014b44880ffa1da3b",
            "tags": {
              "name": "attack-range_windows_2016_dc"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-064f96194ac3c3ea9"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_security_group.default",
            "aws_subnet.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262002194417:internet-gateway/igw-0a9fd50f23e2d8831",
            "id": "igw-0a9fd50f23e2d8831",
            "owner_id": "262002194417",
            "vpc_id": "vpc-03f767db6800fe583"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a9fd50f23e2d8831",
            "id": "r-rtb-0be37239b891201121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0be37239b89120112",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262002194417:security-group/sg-064f96194ac3c3ea9",
            "description": "Allow all inbound traffic from whitelisted IPs in vars file of terraform attack range",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064f96194ac3c3ea9",
            "ingress": [
              {
                "cidr_blocks": [
                  "176.24.252.63/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_whitelist",
            "name_prefix": null,
            "owner_id": "262002194417",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03f767db6800fe583"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262002194417:subnet/subnet-014b44880ffa1da3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-014b44880ffa1da3b",
            "map_public_ip_on_launch": true,
            "owner_id": "262002194417",
            "vpc_id": "vpc-03f767db6800fe583"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262002194417:subnet/subnet-02e616da3205d11e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02e616da3205d11e4",
            "map_public_ip_on_launch": true,
            "owner_id": "262002194417",
            "vpc_id": "vpc-03f767db6800fe583"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262002194417:subnet/subnet-0c005d975ebb6c804",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c005d975ebb6c804",
            "map_public_ip_on_launch": true,
            "owner_id": "262002194417",
            "vpc_id": "vpc-03f767db6800fe583"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:262002194417:vpc/vpc-03f767db6800fe583",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03d30fe7d613f0a4a",
            "default_route_table_id": "rtb-0be37239b89120112",
            "default_security_group_id": "sg-0f72ff59d12953fd7",
            "dhcp_options_id": "dopt-8706acec",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03f767db6800fe583",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0be37239b89120112",
            "owner_id": "262002194417"
          }
        }
      ]
    }
  ]
}